# Jarvis

./: .env.example  .gitignore  README.md  README_FASE1.md  README_FASE2.md  README_FASE3.md  __init__.py  cli.py  config.py  config.yaml  fast_response.py  jarvis.py  pyproject.toml  requirements-phase1.txt  requirements-phase2.txt  requirements-phase3.txt  requirements.txt  secrets.example.yaml  voz.py
.github/workflows/: tests.yml
agent/: __init__.py  decision_log.py  loop.py  prompts.py  registry.py  retriever.py  selector.py
data/: semantic_index.npz
docs/: AUDITORIA_ROUTER.md
eval/: __init__.py  cases.py  harness.py  run_eval.py
intent/: __init__.py  parser.py  schemas.py
memory/: history.py
memory_context/: __init__.py  recall.py  session.py
ollama_client/: __init__.py  client.py
safety/: __init__.py  logger.py  permissions.py  policy.py  secrets.py
storage/: __init__.py  history.py  memory.py  semantic.py
test/: test_agent.py  test_app_index.py  test_apps.py  test_briefing.py  test_config.py  test_continuous_voice.py  test_fase4.py  test_fase5.py  test_fast_response.py  test_files.py  test_intent.py  test_jarvis.py  test_media.py  test_memory_context.py  test_ollama_client.py  test_permissions.py  test_policy.py  test_power.py  test_reader.py  test_reminders.py  test_router.py  test_secrets.py  test_semantic.py  test_startup.py  test_storage.py  test_streaming.py  test_terminal.py  test_voice.py  test_whatsapp.py  test_windows_control.py
tools/: app_index.py  apps.py  briefing.py  browser.py  calculator.py  desktop_actions.py  email_sender.py  files.py  gcalendar.py  hidden_files.py  ip_info.py  jobs.py  jokes.py  location.py  media_controls.py  news.py  notes.py  power.py  reader.py  reminders.py  system_info.py  terminal.py  weather.py  web.py  whatsapp.py  wiki.py  wolfram.py
ui/: __init__.py  desktop.py  server.py
voice/: audio_devices.py  continuous.py  streaming.py  stt.py  tts.py
