[project]
name = "jarvis-local"
version = "6.0.0"
description = "Asistente de IA por voz, 100% local y en espanol, para Windows y Linux"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Omar Hernandez Rey" }]
keywords = ["jarvis", "asistente", "ollama", "voz", "local", "offline", "agente"]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "numpy>=2.0",
    "psutil>=5.9",
    "pillow>=10.0",
    "faster-whisper>=1.0,<2",
    "pyttsx3>=2.90,<3",
    "sounddevice>=0.5",
    "edge-tts>=6.1",
    "selenium>=4.20",
]

[project.optional-dependencies]
calendar = ["google-api-python-client>=2.100", "google-auth-oauthlib>=1.2"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
jarvis = "jarvis_local.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "jarvis_local",
    "jarvis_local.agent",
    "jarvis_local.intent",
    "jarvis_local.tools",
    "jarvis_local.safety",
    "jarvis_local.voice",
    "jarvis_local.storage",
    "jarvis_local.memory",
    "jarvis_local.memory_context",
    "jarvis_local.ollama_client",
    "jarvis_local.ui",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "venv", "__pycache__", "data", "logs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # el limite de linea lo cubre line-length
    "B008",   # llamadas en argumentos por defecto: usadas a proposito
    "SIM108", # el ternario no siempre se lee mejor
]

[tool.ruff.lint.per-file-ignores]
# Los tests ajustan sys.path antes de importar (E402) y usan un runner manual
# en __main__ con varias sentencias por linea (E701/E702).
"test/*" = ["E402", "F401", "E701", "E702", "B011", "F841", "SIM115"]
# La UI de Tkinter usa el estilo compacto habitual (widget.pack() en la misma
# linea que su creacion). Es legible aqui y reformatearlo no aporta nada.
"ui/*" = ["E701", "E702"]
